--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,106 @@
 .App {
+  font-family: sans-serif;
+  text-align: center;
+  margin:0px;
+}
+.header{ 
+  width:100%;
+  height:15%;
+  color:red;
+  background-color:black; 
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header h1{
+  padding:15px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container{
+ height:650px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  background-color: red; 
+}
+.output-container{
+align-items: center;
+margin:0px auto;
+}
+.data-container{
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  color:rgba(3, 75, 92, 0.576); 
+}  
+.table_header{
   color: white;
+  width:100%;
+  font-weight:900; 
+} 
+.table_heading{
+  padding:10px 0px;
+}
+.tabel_data{
+  padding:8px 0px;
+  color:white;
+}
+table, th, td {
+  border: 1px solid white;
+  border-collapse: collapse; 
+}
+th, td {
+  background-color: rgba(3, 75, 92, 0.576);
+  border-radius: 10px;  
 }
 
-.App-link {
-  color: #61dafb;
+/* Css for the input box */
+.contain {
+  height: auto; 
+  width: 380px; 
+  background: rgba(3, 75, 92, 0.576);
+  box-shadow: 5px 5px 5px black;
+  background-position: fixed;
+  margin: 90px auto;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#name,
+#email,
+#password {
+  color: white;
+  font-weight: bolder;
+  text-align: center;
+  height: 40px;
+  width: 350px;
+  font-size: 25px;
+  margin-top: 10px;
+  border-radius: 30px;
+  outline: none;
+  font-family: consolas;
+  background: rgba(00, 00, 00, 0.2);
+}
+#name:hover {
+  background-color: rgb(128, 232, 231);
+  color: blue;
+}
+#email:hover {
+  background-color:rgb(128, 232, 231);
+  color: blue;
+}
+#password:hover {
+  background-color:rgb(128, 232, 231);
+  color: blue;
+}
+#submit {
+  height: 40px;
+  width: 250px;
+  display: block;
+  cursor: pointer;
+  font-size: 25px;
+  margin: 25px auto;
+  border-radius: 30px;
+  outline: none;
+  font-family: consolas;
+  font-weight: bolder;
+}
+#submit:hover {
+  background-color:rgb(128, 232, 231);
+  color: black;
 }
